// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating renders correctly the structure 1`] = `
<div
  className="widget-rating"
  data-focusindex={0}
  onKeyDown={[Function]}
  role="radiogroup"
>
  <div
    aria-checked={false}
    aria-label="1"
    className="rating-item"
    key="icon_1"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={0}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="2"
    className="rating-item"
    key="icon_2"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="3"
    className="rating-item"
    key="icon_3"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="4"
    className="rating-item"
    key="icon_4"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="5"
    className="rating-item"
    key="icon_5"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
</div>
`;

exports[`Rating renders correctly the structure when disabled 1`] = `
<div
  className="widget-rating"
  data-focusindex={0}
  onKeyDown={[Function]}
  role="radiogroup"
>
  <div
    aria-checked={false}
    aria-label="1"
    className="rating-item disabled"
    key="icon_1"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={0}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="2"
    className="rating-item disabled"
    key="icon_2"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="3"
    className="rating-item disabled"
    key="icon_3"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="4"
    className="rating-item disabled"
    key="icon_4"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="5"
    className="rating-item disabled"
    key="icon_5"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
</div>
`;

exports[`Rating renders correctly the structure with custom class 1`] = `
<div
  className="widget-rating my-custom-class"
  data-focusindex={0}
  onKeyDown={[Function]}
  role="radiogroup"
>
  <div
    aria-checked={false}
    aria-label="1"
    className="rating-item"
    key="icon_1"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={0}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="2"
    className="rating-item"
    key="icon_2"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="3"
    className="rating-item"
    key="icon_3"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="4"
    className="rating-item"
    key="icon_4"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="5"
    className="rating-item"
    key="icon_5"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
</div>
`;

exports[`Rating renders correctly the structure without animations 1`] = `
<div
  className="widget-rating"
  data-focusindex={0}
  onKeyDown={[Function]}
  role="radiogroup"
>
  <div
    aria-checked={false}
    aria-label="1"
    className="rating-item"
    key="icon_1"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={0}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="2"
    className="rating-item"
    key="icon_2"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="3"
    className="rating-item"
    key="icon_3"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="4"
    className="rating-item"
    key="icon_4"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
  <div
    aria-checked={false}
    aria-label="5"
    className="rating-item"
    key="icon_5"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="radio"
    tabIndex={-1}
  >
    <div
      className="empty"
    />
  </div>
</div>
`;
